--- a/Aula1.html
+++ b/Aula1.html
@@ -4,12 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aula 02 de JS</title>
+    <title>Aula 01 de JS</title>
 </head>
 
 <body>
 
-    <script src="js/aula1.js"></script>
+    <script>
+        document.write("Olá Mundo")
+        console.log("Outro olá mundo")
+        //alert("Olá mundo com alerta")
+    </script>
 
 </body>
 
